# EET

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_zh.md  c_env.dockerfile  requirements.txt  setup.py
csrc/core/: activation_kernel.cu  activation_kernel.cuh  add_bias.cu  add_bias.cuh  attention_dispatch.cu  attention_dispatch.cuh  bert_softmax.cu  bert_softmax.cuh  common.cuh  cross_add_bias.cu  cross_add_bias.cuh  dq_weight.cu  dq_weight.cuh  embedding_kernel.cu  embedding_kernel.cuh  gpt2_cross_softmax.cu  gpt2_cross_softmax.cuh  gpt2_self_softmax.cu  gpt2_self_softmax.cuh  layer_norm.cu  layer_norm.cuh  pre_process.cu  pre_process.cuh  self_add_bias.cu  self_add_bias.cuh  transpose.cu  transpose.cuh
csrc/cpu_offload/: common.h  mem_reporter.h  mem_strategy.h  weight_attr.h
csrc/cub/: cub.cuh  util_allocator.cuh  util_arch.cuh  util_debug.cuh  util_device.cuh  util_macro.cuh  util_namespace.cuh  util_ptx.cuh  util_type.cuh
csrc/op/: baichuan_mmha.cpp  baichuan_mmha.hpp  common.hpp  cross_multi_head_attention.cpp  cross_multi_head_attention.hpp  embedding.cpp  embedding.hpp  ffn.cpp  ffn.hpp  gated_ffn.cpp  gated_ffn.hpp  gated_ffn_int8.cpp  gated_ffn_int8.hpp  layer_norm.cpp  layer_norm.hpp  llama_mmha.cpp  llama_mmha.hpp  masked_multi_head_attention.cpp  masked_multi_head_attention.hpp  masked_multi_head_attention_int8.cpp  masked_multi_head_attention_int8.hpp  meta_desc.cpp  meta_desc.hpp  (+8 more)
doc/: benchmark.md  model_matrix_table.md
docker/: Dockerfile
example/: gpt2_fairseq_example.py  gpt2_from_buffer_example.py  gpt2_frombuffer_example.py
(+161 files in other folders)
